@@ -1,4 +1,4 @@
 DIST dvipng-1.9.tar.gz 165160 RMD160 25768568d042ca3f600b0a5afec3c4416d09d120 SHA1 83e4a0e7da35ad1a6dd62071cc50c1174e68ddde SHA256 974befe1acc217f25e9b8846da0efa13138f18be55132a944241623cd25a02e1
-EBUILD dvipng-1.9.ebuild 906 RMD160 504af1238d636bfed0873574ac2e3577c88e7578 SHA1 9b7db9bbe6e930066690f188cdf144ecf27a6a3c SHA256 0a33828857d4a1b2ba60d963909011e5914240a319e2680dc680102fa5a572fa
-MISC ChangeLog 2240 RMD160 66a03ee186c09cd8fd08e170924e1d8ed5c907e8 SHA1 22ec0c1e5a4bf890db18ec3101b2863be2403a00 SHA256 6161b9c7035960981ab24840fcf05786bc96f6d45cbae814fdc6598e0fbff5fb
-MISC metadata.xml 156 RMD160 2bf6b2ed9ff0fcef1e902cf093ccf4ae2dcc70a0 SHA1 e9260cd53905d8569cf3327ded4c6d01653fc389 SHA256 b4971b8472ab3fe4fbfe41b331a79193ca19e86c08d055ad1c20eaf9e04b79b6
+EBUILD dvipng-1.9.ebuild 1118 RMD160 42486ebc238d453c21d0072cedd2265d6efb2d32 SHA1 1c7060a2065d0e297cae710eda03e8c13e393571 SHA256 7a21f59f58e4dace9d3d9ee602113dd7b30d7316dda522ab3c54f7f56b3a258f
+MISC ChangeLog 2450 RMD160 7eb8c350bcf447b5c4e000495bfc2e183479fcc2 SHA1 8e0254b209a52531f31f92ffbc87c633f87f55c8 SHA256 f56a1f7365e995d02534229cf9dab424065b87321355468a64a97d13b70e2e95
+MISC metadata.xml 175 RMD160 f83529f6c0dddf0438e184fa331a2b6da44bb7fd SHA1 5602272db68de53633aeaf49c94dd948f6005bf6 SHA256 e72a1954a4dc23a98de443a41c29d21f1e68917cc35e0f89c88ffd0c446e6a47
