@@ -1,8 +1,10 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dvipng/dvipng-1.9.ebuild,v 1.1 2007/02/08 23:16:34 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dvipng/dvipng-1.9.ebuild,v 1.2 2007/05/15 03:40:13 opfer Exp $
 
 EAPI="prefix"
+
+inherit eutils
 
 IUSE="truetype"
 DESCRIPTION="A program to translate a DVI (DeVice Independent) files into PNG (Portable Network Graphics) bitmaps"
@@ -19,6 +21,13 @@ RDEPEND="media-libs/gd
 	truetype? ( >=media-libs/freetype-2.1.5 )"
 DEPEND="${RDEPEND}
 	sys-apps/texinfo"
+
+pkg_setup() {
+	if ! built_with_use media-libs/gd jpeg png; then
+		eerror "You must rebuild media-libs/gd with USE=\"jpeg png\""
+		die "You must rebuild media-libs/gd with USE=\"jpeg png\""
+	fi
+}
 
 src_compile() {
 	econf $(use_with truetype freetype) || die "Configure failed"
